- Optimizations in NXCP processing
- Added driver for Cisco Small Business switches
- Improved file retrieve from agent
- Windows agent: added service list and service table (System.Services)
- Management console:
   - Implemented alarm sounds
   - Fixed "broken pipe" errors
   - Fixed fail on Web console while picture uplod to image library
- Android Console:
	- Fix bug missing hide notification alarm in status bar 
	- Implemented "Font size in graph/dashboard sessions" (Feature #240) 
- Fixed issues: #109, #438, #471, #508


*
* 1.2.12
*

- Support for MetaSystem UPS in UPS subagent
- Timed (temporary) alarm acknowledgement
- New subagent DBQuery - replacement for ODBCQuery 
- DCI access functions in NXSL works correctly with table DCIs
- Fixed bugs with instance discovery DCIs created from templates
- New property "runtimeFlags" in NXSL class "Node"
- New event SYS_IF_PEER_CHANGED (sent when peer change detected in interface)
- New system permission: Manage Image Library
- Object level access control can be enabled for logs
- New NXSL function FindAllDCIs
- Driver for Allied Telesis switches improved
- Management console:
   - Fixed bug with red zone display in "last value" dashboard element
   - Edit and delete for alarm comments are working now
   - Fixed Y axis range can be set for line and bar charts
   - In alarm menue are not shown incompatible for selected alarm statuses.
   - Alarm status flow can be changed to strict (terminate status can be set only 
     after alarm is resolved). To change flow set "StrictAlarmStatusFlow" parameter to 1.
   - SNMP MIB loaded into memory on first access
- Android Agent:
	- Implemented "Connection notification" in status bar (feature #481)
	- Fix bug in resetting switch preference (settings) 
- Android Console:
	- Fix bug in resetting switch preference (settings) 
	- Implemented "Entire network" root (feature #482)
	- Manage last alarm from status bar: acknowledge, resolve, terminate (only for Android >= 4.1)